@@ -27,6 +27,8 @@ Version 1.4.2
 - CHG: The "break lock" entry is shown in the change-for-modifications context
        menu for added files too if it has a remote lock. This is a workaround
        for http://subversion.tigris.org/issues/show_bug.cgi?id=2507. (Stefan)
+- CHG: The "next 100" button is disabled if the log messages are not sorted
+       by revision in descending order in the log dialog. (Stefan)
 
 Version 1.4.1
 - NEW: TortoiseMerge can now handle files with CR lineendings. (Stefan)
